# gastos_prorrateados

./: .gitignore  Dockerfile  README.md  install.sh  package.json  pyproject.toml  setup.py
gastos_prorrateados/: hooks.py  modules.txt
gastos_prorrateados/config/: desktop.py
gastos_prorrateados/fixtures/: custom_field.json
gastos_prorrateados/gastos_prorrateados/doctype/gasto_prorrateado/: gasto_prorrateado.js  gasto_prorrateado.json  gasto_prorrateado.py
gastos_prorrateados/gastos_prorrateados/doctype/linea_de_prorrateo/: linea_de_prorrateo.json  linea_de_prorrateo.py
gastos_prorrateados/gastos_prorrateados/doctype/linea_gasto_prorrateado/: linea_gasto_prorrateado.json  linea_gasto_prorrateado.py
gastos_prorrateados/gastos_prorrateados/doctype/linea_pago_empresa/: linea_pago_empresa.json  linea_pago_empresa.py
gastos_prorrateados/gastos_prorrateados/doctype/perfil_de_prorrateo/: perfil_de_prorrateo.json  perfil_de_prorrateo.py
