[project]
name = "gastos_prorrateados"
authors = [
    {name = "OmniaOS", email = "admin@omniaos.ai"}
]
description = "Módulo de Gastos Prorrateados entre múltiples empresas para ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "gastos_prorrateados"
